--- a/src/app/contact/contact.page.html
+++ b/src/app/contact/contact.page.html
@@ -4,29 +4,29 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-  <ion-list lines="none" class="form fade-in">
-    <ion-item>
-      <ion-label>Nombre</ion-label>
-      <ion-input class="ion-text-right"></ion-input>
-      <ion-icon slot="end" name="lock"></ion-icon>
-    </ion-item>
-    <ion-item>
-      <ion-label>Email</ion-label>
-      <ion-input class="ion-text-right"></ion-input>
-      <ion-icon slot="end" name="at"></ion-icon>
-    </ion-item>
-    <ion-item>
-      <ion-label>Teléfono</ion-label>
-      <ion-input class="ion-text-right"></ion-input>
-      <ion-icon slot="end" name="lock"></ion-icon>
-    </ion-item>
-    <ion-item>
-      <ion-label>Mensaje</ion-label>
-      <ion-input class="ion-text-right"></ion-input>
-      <ion-icon slot="end" name="lock"></ion-icon>
-    </ion-item>
-    <ion-button expand="block">Block Button</ion-button>
-  </ion-list>
+<ion-content fullscreen>
+  <ion-list lines="full" class="ion-no-margin">
 
+    <ion-item>
+      <ion-label position="stacked" >Nombre</ion-label>
+      <ion-input placeholder="Yomara" type="name"></ion-input>
+    </ion-item>
+
+    <ion-item>
+      <ion-label position="stacked" Type="email">Correo</ion-label>
+      <ion-input Type="email" placeholder="ejemplo@ejemplo.com"></ion-input>
+    </ion-item>
+
+    <ion-item>
+      <ion-label position="stacked" >Teléfono</ion-label>
+      <ion-input Type="tel" placeholder="0954378564"></ion-input>
+    </ion-item>
+
+    <ion-item>
+    <ion-label position="stacked">Mensaje</ion-label>
+      <ion-textarea Type="text" placeholder="Buenas tardes me comunico con usted ..."></ion-textarea>
+    </ion-item>
+    <ion-button >Enviar</ion-button>
+  </ion-list>
+  
 </ion-content>
