--- a/src/app/contact/contact.page.scss
+++ b/src/app/contact/contact.page.scss
@@ -1,3 +1,27 @@
+icon{background-color: red;}
 ion-button{
-background-color: red;
+background-color: var(--ion-color-mycolor);
+}
+ion-content{
+    font-family: 'Times New Roman', Times, serif;
+    background-color: var(--ion-color-mycolor);
+}
+img{
+    display:block !important;
+    margin:auto !important;
+    width: 60%; ;
+    border-radius: 100px;
+    border-color: var(--ion-color-mycolor);
+    border: 5px solid var(--ion-color-mycolor);
+}
+ion-card-title{
+    text-align: center;
+    color: rgba(60, 180, 172, 0.58);
+}
+//ion-card-header{
+    //background-color: var(--ion-color-mycolora);
+//}
+ion-card-content{
+    color: #383E56;
+    background-color: var(--ion-color-mycolora);
 }
