--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -20,6 +20,6 @@
   <form id="form">
     <app-input placeholder="Correo">Correo</app-input>
     <app-input type="password" placeholder="Contraseña">Contraseña</app-input>
-    <ion-button expand="block" shape="round">Ingresar</ion-button>
+    <ion-button expand="block"  color= #FB743E>Ingresar</ion-button>
   </form>
 </ion-content>
