--- a/src/app/contact/contact.page.html
+++ b/src/app/contact/contact.page.html
@@ -1,9 +1,11 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>Contáctanos</ion-title>
+    <ion-icon name="logo-whatsapp" slot="end"  class="whatsapp" [routerlink]="['https://wa.link/6moegs']"></ion-icon>
+    <ion-icon name="call" slot="end" class="call"></ion-icon>
+    <ion-icon name="logo-facebook" slot="end" class="facebook"></ion-icon>
   </ion-toolbar >
-    <ion-icon name="logo-whatsapp" style="background-color: success; border-radius: 100%;" ></ion-icon>
-    
+   
 </ion-header>
 
 <ion-content fullscreen>
@@ -15,7 +17,6 @@
       </ion-card-header>
 
       <ion-card-content>
-        <ion-card-subtitle>Estaremos en contacto muy pronto</ion-card-subtitle>
         <ion-list lines="full" class="ion-no-margin">
           <ion-item>
             <ion-label position="stacked" >Nombre</ion-label>
@@ -33,8 +34,10 @@
           <ion-label position="stacked">Mensaje</ion-label>
             <ion-textarea Type="text" placeholder="Buenas tardes me comunico con usted ..."></ion-textarea>
           </ion-item>
-          <ion-button color=(--color-color-mycolor)>Enviar</ion-button>
         </ion-list>
+        
+        <ion-card-subtitle>Estaremos en contacto muy pronto</ion-card-subtitle>
+        <ion-button color=(--ion-color-mycolor)>Enviar</ion-button>
       </ion-card-content>
      
     </ion-card>
