--- a/src/app/contact/contact.page.scss
+++ b/src/app/contact/contact.page.scss
@@ -1,6 +1,27 @@
-icon{background-color: red;}
+.whatsapp{
+    width: 30px;
+    height: 30px;
+    color:#00bb2d;
+}
+.call{
+    width: 30px;
+    height: 30px;
+    color:var(--ion-color-mycolora);
+}
+.facebook{
+    width: 30px;
+    height: 30px;
+    color:#3b5998;
+    
+}
 ion-button{
-background-color: var(--ion-color-mycolor);
+    display:block !important;
+    margin: auto !important;
+    background-color: var(--ion-color-mycolor);
+    border-radius: 20px;
+    width: 80%;
+
+
 }
 ion-content{
     font-family: 'Times New Roman', Times, serif;
@@ -16,12 +37,25 @@ img{
 }
 ion-card-title{
     text-align: center;
-    color: rgba(60, 180, 172, 0.58);
+    //color: rgba(60, 180, 172, 0.58);
+    color:var(--ion-color-mycolor);
 }
-//ion-card-header{
-    //background-color: var(--ion-color-mycolora);
-//}
+ion-card-subtitle{
+    color:var(--ion-color-mycolor);
+    text-align: center;
+}
+
+
+ion-card-header{
+    //border: 5px solid var(--ion-color-mycolora);
+    background-color: var(--ion-color-mycolora);
+}
 ion-card-content{
     color: #383E56;
     background-color: var(--ion-color-mycolora);
+    font-size: 20px;
+}
+ion-list{
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 20px;
 }
