--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -61,12 +61,14 @@
   <ion-card>
   
       <ion-card-header>
-        <ion-card-title>El PC va muy lento</ion-card-title>
+        <img src="./assets/icon/contactanos.png" />
+        
       </ion-card-header>
       <ion-card-content>
-        Si el ordenador ha disminuido su rendimiento, puede necesitar desfragmentación del disco duro o haya
-        realizado una ejecución de un software malicioso (virus informático, gusanos informáticos, malaware)que afecta a la velocidad del sistema y te haga falta una 
-        limpieza de virus.
+        <ion-text>Desea contáctarse con nosotros, puedes enviar un correo y estaremos 
+          nos comunicaremos contigo en poco tiempo.
+        </ion-text>
+        <ion-button routerLink="/contact" color=var(ion-color-mycolor)>Contáctanos </ion-button>
       </ion-card-content>
   </ion-card>
 </ion-content>
