--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -56,7 +56,7 @@
       </ion-item>
       
     </ion-list>
-    <ion-button routerLink="/solutions" color=var(ion-color-mycolor)>Posibles daños </ion-button>
+    <ion-button href="/solutions" color=var(ion-color-mycolor)>Posibles daños </ion-button>
   </ion-grid>
   <ion-card>
   
@@ -68,7 +68,7 @@
         <ion-text>Desea contáctarse con nosotros, puedes enviar un correo y estaremos 
           nos comunicaremos contigo en poco tiempo.
         </ion-text>
-        <ion-button routerLink="/contact" color=var(ion-color-mycolor)>Contáctanos </ion-button>
+        <ion-button href="/contact" color=var(ion-color-mycolor)>Contáctanos </ion-button>
       </ion-card-content>
   </ion-card>
 </ion-content>
