--- a/src/app/signup/signup.page.html
+++ b/src/app/signup/signup.page.html
@@ -1,12 +1,12 @@
 <ion-header class="ion-no-border">
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-button color="primary" routerLink="/login">
+      <ion-button color="primary" href="/login">
         <ion-icon slot="icon-only" name="arrow-back"></ion-icon>
       </ion-button>
     </ion-buttons>
     <ion-buttons slot="end">
-      <ion-button routerLink="/login">Ingresar</ion-button>
+      <ion-button href="/login">Ingresar</ion-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
