--- a/src/app/usercomment/usercomment.page.html
+++ b/src/app/usercomment/usercomment.page.html
@@ -52,13 +52,13 @@
 
   <ion-grid>
     <ion-row>
-      <ion-button routerLink="/userclient" expand="full" color=var(--ion-color-mycolor)>Mi Pefil</ion-button>
+      <ion-button href="/userclient" expand="full" color=var(--ion-color-mycolor)>Mi Pefil</ion-button>
     </ion-row>
     <ion-row>
-      <ion-button routerLink="/usercomment" expand="full" color=var(--ion-color-mycolor)>Estado de Requerimiento</ion-button>
+      <ion-button href="/usercomment" expand="full" color=var(--ion-color-mycolor)>Estado de Requerimiento</ion-button>
     </ion-row>
     <ion-row>
-      <ion-button routerLink="/usercomment" expand="full" color=var(--ion-color-mycolor)>Calificar técnicos</ion-button>
+      <ion-button href="/usercomment" expand="full" color=var(--ion-color-mycolor)>Calificar técnicos</ion-button>
     </ion-row>
     </ion-grid>
 
