--- a/src/app/usertechnical/usertechnical.page.html
+++ b/src/app/usertechnical/usertechnical.page.html
@@ -36,13 +36,13 @@
         </ion-list>
         <ion-grid>
           <ion-row>
-            <ion-button routerLink="/technicalcomment" expand="full" color=var(--ion-color-mycolor)>Comentarios</ion-button>
+            <ion-button href="/technicalcomment" expand="full" color=var(--ion-color-mycolor)>Comentarios</ion-button>
           </ion-row>
           <ion-row>
-            <ion-button routerLink="/usercomment" expand="full" color=var(--ion-color-mycolor)>Requerimientos</ion-button>
+            <ion-button href="/usercomment" expand="full" color=var(--ion-color-mycolor)>Requerimientos</ion-button>
           </ion-row>
           <ion-row>
-            <ion-button routerLink="/usercomment" expand="full" color=var(--ion-color-mycolor)>Calificar técnicos</ion-button>
+            <ion-button href="/usercomment" expand="full" color=var(--ion-color-mycolor)>Calificar técnicos</ion-button>
           </ion-row>
           </ion-grid>
     
