--- a/src/app/userclient/userclient.page.html
+++ b/src/app/userclient/userclient.page.html
@@ -35,13 +35,13 @@
       </ion-list>
       <ion-grid>
         <ion-row>
-          <ion-button routerLink="/usercomment" expand="full" color=var(--ion-color-mycolor)>Comentarios</ion-button>
+          <ion-button href="/usercomment" expand="full" color=var(--ion-color-mycolor)>Comentarios</ion-button>
         </ion-row>
         <ion-row>
-          <ion-button routerLink="/usercomment" expand="full" color=var(--ion-color-mycolor)>Requerimientos</ion-button>
+          <ion-button href="/usercomment" expand="full" color=var(--ion-color-mycolor)>Requerimientos</ion-button>
         </ion-row>
         <ion-row>
-          <ion-button routerLink="/usercomment" expand="full" color=var(--ion-color-mycolor)>Calificar técnicos</ion-button>
+          <ion-button href="/usercomment" expand="full" color=var(--ion-color-mycolor)>Calificar técnicos</ion-button>
         </ion-row>
         </ion-grid>
   
