--- a/src/app/contact/contact.page.html
+++ b/src/app/contact/contact.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>Contáctanos</ion-title>
-    <ion-icon name="logo-whatsapp" slot="end"  class="whatsapp" [routerlink]="['https://wa.link/6moegs']"></ion-icon>
+    <ion-icon name="logo-whatsapp" slot="end"  class="whatsapp" ></ion-icon>
     <ion-icon name="call" slot="end" class="call"></ion-icon>
     <ion-icon name="logo-facebook" slot="end" class="facebook"></ion-icon>
   </ion-toolbar >
