--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,12 +1,12 @@
 <ion-header class="ion-no-border">
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-button color="primary" routerLink="/home">
+      <ion-button color="primary" href="/home">
         <ion-icon slot="icon-only" name="arrow-back"></ion-icon>
       </ion-button>
     </ion-buttons>
     <ion-buttons slot="end">
-      <ion-button routerLink="/signup">Registrarse</ion-button>
+      <ion-button href="/signup">Registrarse</ion-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
