--- a/src/app/usertechnical/usertechnical.page.html
+++ b/src/app/usertechnical/usertechnical.page.html
@@ -42,7 +42,7 @@
             <ion-button href="/usercomment" expand="full" color=var(--ion-color-mycolor)>Requerimientos</ion-button>
           </ion-row>
           <ion-row>
-            <ion-button href="/usercomment" expand="full" color=var(--ion-color-mycolor)>Calificar técnicos</ion-button>
+            <ion-button href="" expand="full" color=var(--ion-color-mycolor)>Calificar técnicos</ion-button>
           </ion-row>
           </ion-grid>
     
