--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -58,8 +58,8 @@
     </ion-list>
     <ion-button href="/solutions" color=var(ion-color-mycolor)>Posibles daños </ion-button>
   </ion-grid>
+
   <ion-card>
-  
       <ion-card-header>
         <img src="./assets/icon/contactanos.png" />
         
@@ -71,4 +71,17 @@
         <ion-button href="/contact" color=var(ion-color-mycolor)>Contáctanos </ion-button>
       </ion-card-content>
   </ion-card>
+  <ion-card>
+    <ion-card-header>
+      <img src="./assets/icon/trabaja.jpg" />
+      
+    </ion-card-header>
+    <ion-card-content>
+      <ion-text>Desea contáctarse con nosotros, puedes enviar un correo y estaremos 
+        nos comunicaremos contigo en poco tiempo.
+      </ion-text>
+      <ion-button href="/work" color=var(ion-color-mycolor)>Trabaja con nosotros </ion-button>
+    </ion-card-content>
+</ion-card>
+
 </ion-content>
