--- a/src/app/userclient/userclient.page.html
+++ b/src/app/userclient/userclient.page.html
@@ -1,6 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>Cliente</ion-title>
+    <ion-button  class="button-edit" color=var(--ion-color-mycolor) slot="end">Editar</ion-button>
   </ion-toolbar>
 </ion-header>
 
