--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -8,7 +8,7 @@ ion-toolbar {
 }
 
 ion-content {
-  --background: #f5f5f3;
+  --background: var(--ion-color-mycolora);
 
   #header {
     display: flex;
@@ -18,8 +18,9 @@ ion-content {
     h1 {
       font-weight: 700;
       font-size: 26px;
-      color: #010100;
       margin-bottom: 15%;
+      color:var(--ion-color-mycolor);
+      font-family: 'Times New Roman', Times, serif;
     }
 
     img {
@@ -27,6 +28,7 @@ ion-content {
       height: 125px;
       border-radius: 50%;
       border: 8px solid #ffffff;
+      background-color: white;
     }
   }
 
@@ -40,7 +42,7 @@ ion-content {
       height: 48px;
       font-size: 18px;
       text-transform: initial;
-      border-radius: 50px;
+      background-color: var(--ion-color-mycolor);
       box-shadow: 1px 8px 8px 0px rgba(0, 0, 0, 0.05);
       --box-shadow: none;
     }
