--- a/src/app/signup/signup.page.html
+++ b/src/app/signup/signup.page.html
@@ -5,6 +5,7 @@
         <ion-icon slot="icon-only" name="arrow-back"></ion-icon>
       </ion-button>
     </ion-buttons>
+    
     <ion-buttons slot="end">
       <ion-button href="/login">Ingresar</ion-button>
     </ion-buttons>
@@ -12,13 +13,13 @@
 </ion-header>
 
 <ion-content>
-  <h1>Crear una cuenta</h1>
-
+  <h1 >Crear una cuenta</h1>
   <form id="form">
     <app-input placeholder="Nombre"></app-input>
     <app-input placeholder="Correo"></app-input>
     <app-input type="Password" placeholder="Contraseña"></app-input>
-    <ion-button expand="block" shape="round">Crear tu cuenta</ion-button>
+    <app-input type="Password" placeholder="Confirmar Contraseña"></app-input>
+    <ion-button expand="block" color="--ion-color-mycolor">Crear tu cuenta</ion-button>
   </form>
 
   <p>Aceptas crear tu cuenta <br />Acepto términos y condiciones</p>
