--- a/src/app/userclient/userclient.page.scss
+++ b/src/app/userclient/userclient.page.scss
@@ -2,6 +2,10 @@ ion-avatar{
     display:block !important;
     margin:auto !important;
 }
+.button-edit{
+    width: 30% !important;
+    background-color: var(--ion-color-mycolor) !important;
+}
 ion-icon{
     display:block !important;
     margin:auto !important;
